@@ -1,3 +1,7 @@
+2010-04-14  Doug Evans  <dje@google.com>
+
+	* filenames.h (HAS_DRIVE_SPEC, STRIP_DRIVE_SPEC): New macros.
+
 2010-04-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* dwarf2.h (DWARF2_Internal_LineInfo): Add li_max_ops_per_insn
